2009-08-20  John Dallaway  <john@dallaway.org.uk>

	* ecos.db: Add uSTL package.

2009-07-14  John Dallaway  <john@dallaway.org.uk>

	* ecos.db: Add CYGPKG_IO_USB and CYGPKG_IO_USB_SLAVE hardware packages
	to targets at91sam7sek, at91sam7xek and sam7ex256.

2009-03-19  Ilija Kocho  <ilijak@siva.com.mk>

	* ecos.db: target mac7100evb added word "Freescale" to the description.
	
2009-03-04  Nick Garnett  <nickg@ecoscentric.com>

	* ecos.db: Add ADC synthetic driver. Add STM32 ADC driver.

2009-02-12  John Dallaway  <john@dallaway.org.uk>

	* ecos.db: Make CYGPKG_DEVS_FLASH_SPI_M25PXX a hardware package.

2009-02-06  John Dallaway  <john@dallaway.org.uk>

	* ecos.db: Eliminate superfluous target aliases which duplicate target
	name.

2009-02-05  Chris Holgate  <chris@zynaptic.com>
 
	* ecos.db: Added M25Pxx SPI flash driver.  Included M25pxx driver in
 	STM3210E eval board template.
 
2009-02-05  John Dallaway  <john@dallaway.org.uk>

	* ecos.db: Remove package and target records for the deprecated
	ColdFire port to avoid confusion. Add the CYGPKG_IO_SPI hardware
	package to all relevant target records.

	* pkgconf/stylesheet.dsl, pkgconf/ssa4.dsl, pkgconf/ssletter.dsl:
	Match up "--" string delimiters in the copyright banners.

2009-02-04  Nick Garnett  <nickg@ecoscentric.com>

	* ecos.db: Add STM32 SPI driver.

2009-01-08  John Dallaway  <john@dallaway.org.uk>

	* ecosadmin.tcl, pkgconf/fixhtml.tcl: Specify script interpreter via
	/usr/bin/env.

2008-12-02  Sergei Gavrikov <sergei.gavrikov@gmail.com>

	* ecos.db: Use the flash V2 driver for the LPC-H2294, LPC-E2294, &
	LPC-L2294-1MB targets.
	
2008-11-23  Sergei Gavrikov <sergei.gavrikov@gmail.com>

	* NEWS:
	* ecos.db: Ports to LPC-H2294, LPC-E2294, & LPC-L2294-1MB
	including flash drivers and ethernet drivers where appropriate.

	
2008-11-20  Bart Veer  <bartv@ecoscentric.com>

	* ecos.db: update M68K HAL packages and add m68k/mcfxxxx serial
	and ethernet device drivers.
