@@ -8,7 +8,7 @@
 ## ####ECOSGPLCOPYRIGHTBEGIN####                                            
 ## -------------------------------------------                              
 ## This file is part of eCos, the Embedded Configurable Operating System.   
-## Copyright (C) 2008 Free Software Foundation, Inc.                        
+## Copyright (C) 2008, 2009 Free Software Foundation, Inc.                        
 ##
 ## eCos is free software; you can redistribute it and/or modify it under    
 ## the terms of the GNU General Public License as published by the Free     
@@ -275,7 +275,7 @@ cdl_package CYGPKG_IO_USB_SLAVE_SERIAL {
                  display "USBS serial example/test programs"
                  no_define
                  flavor data
-                 calculated { "tests/usbserial_echo.c tests/usb2serial.c" }
+                 calculated { "tests/usbserial_echo tests/usb2serial" }
                  description "
                      usbserial_echo will echo charactors received
                      over the usb serial port back to the sender.
